<?xml version="1.0"?>
<package>
  <name>px4_comm</name>
  <version>0.1.0</version>
  <description>The px4_comm package</description>
  <maintainer email="emil.fresk@gmail.com">Emil Fresk</maintainer>
  <license>BSL-1.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>mavros</run_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
