<?xml version="1.0"?>
<package format="2">
  <name>px4_comm</name>
  <version>0.1.0</version>
  <description>The px4_comm package</description>
  <maintainer email="emil.fresk@gmail.com">Emil Fresk</maintainer>
  <license>BSL-1.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mav_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <depend>geometry_msgs</depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
